# rnboid2

./: .gitignore  ANALYSIS_INDEX.md  ANDROID_ARCHITECTURE_SUMMARY.md  ANDROID_FILE_REFERENCE.md  ANDROID_RNBO_ANALYSIS.md  CUSTOM_RANGE_COMMANDS.md  MACINCLOUD_COMANDI.md  PRESETS_COMMANDS.md  README_ANDROID_ANALYSIS.md  RNBO_iOS_DIAGRAMS_AND_EXAMPLES.md  RNBO_iOS_QUICK_REFERENCE.txt  RNBO_iOS_SYSTEM_ANALYSIS.md  XYPAD_COMMANDS.md  setup_autoui.sh
Max-MSP-RNBO-CPP-Native-Android-master/: MEDIAPIPE_SETUP.txt
Max-MSP-RNBO-CPP-Native-Android-master/app/: build.gradle
Max-MSP-RNBO-CPP-Native-Android-master/app/src/main/cpp_backup/: BufferLoader.cpp  BufferLoader.h  CMakeLists.txt  MSPLoader.cpp  MSPLoader.h  dependencies.json  native-lib.cpp
SwiftRNBO-main/: ANALYSIS.md  FEATURE_ANALYSIS.md  TESTING.md
export2/: description.json  presets.json  rnbomatic_binary.cpp
rnbo_replacer_ios/: .gitignore  EXAMPLE.md  QUICKSTART.md  README.md  STRUCTURE.txt  __init__.py  main.py  requirements.txt  test_imports.py
rnbo_replacer_ios/core/: __init__.py  analyzer.py  replacer.py
rnbo_replacer_ios/utils/: __init__.py  logger.py
rnbo_replacer_with_presets/: BUFFER_SUPPORT_AUTOMATION.md  CHANGELOG.md  COMPARISON.md  DELIVERY.md  EXTENSIONS.md  INDEX.md  QUICKSTART.md  QUICKSTART_AUTOMATED.md  README.md  __init__.py  main.py  mainactivity_extracted.txt  requirements.txt  structure.txt  test_structure.py  verify_template.py
rnbo_replacer_with_presets/core/: __init__.py  analyzer.py  replacer.py
rnbo_replacer_with_presets/gui/: __init__.py  main_window.py
(+58 files in other folders)
